# engine

./: .gitignore  CMakeLists.txt  imgui.ini
include/application/: Keyboard.hpp  application.hpp  config.hpp  event.hpp  mouse.hpp  window.hpp
include/event/: event.hpp  mouse.hpp
include/graphics/: GLTypes.hpp  indexBuffer.hpp  renderer.hpp  shader.hpp  sprite.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp
include/macro/: assert.hpp  glerrorcheck.hpp
include/math/: math.hpp
include/opengl/: GLTypes.hpp  indexBuffer.hpp  index_buffer.hpp  renderer.hpp  vertexArray.hpp  vertexBuffer.hpp  vertexBufferLayout.hpp  vertex_buffer.hpp
modules/glad/include/glad/: glad.h
modules/glad/src/: glad.c
res/shaders/: basic.shader
src/: main.cpp  pch.hpp
src/application/: application.cpp  window.cpp
src/graphics/: indexBuffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp
src/graphics/opengl/shaders/: basic.frag  basic.vert
src/opengl/: indexBuffer.cpp  index_buffer.cpp  renderer.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp  vertex_buffer.cpp
src/util/: embedded.cpp  embedded.hpp  stbimage.cpp  stbimage.hpp
